# swin3d-dual-decoder-insar-inversion

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: example_hdf5_train.json  example_netcdf_train.json
sample_data/: README.md  punjab_real_sample.h5
src/swin3d_dual_decoder_insar_inversion/: __init__.py  cli.py  config.py  data.py  metrics.py  models.py  physics.py  predict.py  train.py
